@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-gnome-meta-2.28-r1 (08 Nov 2010)
+
+  08 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cl-gnome-meta-2.28-r1.ebuild:
+  Removed gnome-base/gnome-volume-manager
+
 *cl-gnome-meta-2.28 (08 Jun 2010)
 
   08 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
